fix: fix spacing .formInput

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -8,10 +8,11 @@
 
 .formsInput {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 0.5rem;
 
-    margin-top: -1.75rem;
+    margin: -1.75rem 0.75rem 0 0.75rem;
 }
 
 .formsInput input {
@@ -57,6 +58,10 @@
 
     transition: background-color 0.1s;
     cursor: pointer;
+
+    @media (max-width: 637px) {
+        width: 100%;
+    }
 }
 
 .formsInput button[type="submit"]:hover {
